--- a/styles/style.scss
+++ b/styles/style.scss
@@ -190,7 +190,7 @@ header nav {
         font-weight: 600;      
         li {
             margin-left: 2rem;
-            svg {
+            .svg {
                 all: revert;
                 width: 1.75rem;
             }
