--- a/styles/style.css
+++ b/styles/style.css
@@ -289,6 +289,7 @@ a {
 
 img {
   width: 100%;
+  height: auto;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -304,6 +305,8 @@ img {
   color: 0;
   box-shadow: none;
   transition: all 0.25s;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 .textContainer,
@@ -954,9 +957,6 @@ footer .copyright a {
     width: 60%;
     order: -1;
   }
-  .hero .wrapper .imageContainer img {
-    width: 100%;
-  }
   .about .wrapper {
     flex-direction: column;
   }
@@ -974,6 +974,9 @@ footer .copyright a {
   }
   .about .wrapper .textContainer .aboutFact {
     margin: 0;
+  }
+  h2 {
+    font-size: 1.5rem;
   }
   .sectionHeading p {
     width: 100%;
@@ -1002,9 +1005,6 @@ footer .copyright a {
   }
   footer .first .imageContainer {
     margin: 0 auto;
-  }
-  footer .first img {
-    width: 60%;
   }
   footer .first .division {
     align-items: center;
