--- a/styles/style.css
+++ b/styles/style.css
@@ -700,9 +700,6 @@ footer .footerCol h3 {
 footer .first {
   padding-right: 2rem;
 }
-footer .first .imageContainer {
-  height: 20%;
-}
 footer .first .imageContainer img {
   filter: invert(24%) sepia(77%) saturate(4208%) hue-rotate(79deg) brightness(50%) contrast(101%);
 }
@@ -1005,6 +1002,7 @@ footer .copyright a {
   }
   footer .first .imageContainer {
     margin: 0 auto;
+    width: 25%;
   }
   footer .first .division {
     align-items: center;
