--- a/styles/style.css
+++ b/styles/style.css
@@ -680,12 +680,6 @@ header {
   padding: 1rem 0;
 }
 
-footer {
-  background-image: url(../assets/cow.png);
-  background-position: bottom;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
 footer .footerCol {
   width: 25%;
   height: 42vh;
@@ -703,13 +697,13 @@ footer .first {
 footer .first .imageContainer img {
   filter: invert(24%) sepia(77%) saturate(4208%) hue-rotate(79deg) brightness(50%) contrast(101%);
 }
-footer .first .division {
+footer .division {
   justify-content: space-evenly;
 }
-footer .first .division nav ul li {
+footer .division nav ul li {
   margin-right: 1rem;
 }
-footer .first .division nav svg:hover {
+footer .division nav .svg:hover {
   background-color: #5EA85E;
 }
 footer .second {
@@ -766,8 +760,13 @@ footer .fourth form input::placeholder {
   color: #1A2428;
   font-size: 0.9rem;
 }
+footer .footerImage {
+  font-size: 0;
+}
 footer .copyright {
+  background-color: #207200;
   color: #fff;
+  box-shadow: none;
   font-size: 0.75rem;
   text-align: center;
 }
