--- a/styles/style.css
+++ b/styles/style.css
@@ -804,9 +804,6 @@ footer .copyright a {
   z-index: 1;
 }
 
-.contact {
-  height: 100vh;
-}
 .contact .wrapper {
   height: 100%;
   align-items: flex-start;
@@ -883,6 +880,14 @@ footer .copyright a {
   }
   .hide {
     display: none;
+  }
+  .contact .wrapper {
+    height: 100%;
+    flex-direction: column;
+  }
+  .contact .wrapper .textContainer {
+    width: 80%;
+    margin: 0 auto;
   }
   footer .wrapper {
     flex-wrap: wrap;
@@ -1024,11 +1029,27 @@ footer .copyright a {
   footer .second .division {
     align-items: center;
   }
+  .line1and2 {
+    flex-direction: column;
+  }
+  .contact .wrapper form .line1and2 input {
+    width: 100%;
+  }
 }
 @media (max-width: 480px) {
   .productGallery li {
     max-width: 90%;
     margin: 0 auto;
-    padding-bottom: 1.5rem;
+    padding-bottom: 1rem;
+  }
+  .contact .wrapper .contactContainer li {
+    padding: 1rem;
+  }
+  .contact .wrapper form {
+    padding: 1.5rem;
+  }
+  .contact .wrapper button {
+    padding: 1rem 1.5rem;
+    font-size: 0.75rem;
   }
 }
