--- a/styles/style.css
+++ b/styles/style.css
@@ -511,23 +511,6 @@ header {
   transform: scale(1.2);
 }
 
-/*   //animation for hero//
-.animate {
-    animation-duration: 2s;
-    animation-name: slidein;
-}
-
-@keyframes slidein {
-    from {
-        margin-right: 100%;
-        width: 200%;
-    }
-    to {
-        margin-left: 0%;
-        width: 100%;
-    }
-}
-*/
 .about .wrapper {
   align-items: flex-start;
 }
@@ -896,32 +879,37 @@ footer .copyright a {
     width: 32%;
   }
   footer .wrapper .fourth {
+    background-color: #207200;
+    color: #fff;
     width: 100%;
     height: auto;
-    padding: 0;
+    padding: 2rem;
     border: none;
-    border-radius: none;
+    border-radius: 4px;
     margin: 3rem 0 0 0;
     text-align: center;
   }
   footer .wrapper .fourth h3 {
-    border-top: 4px solid #5EA85E;
-    padding-top: 3.5rem;
-  }
-  footer .wrapper .fourth p {
-    padding: 1rem 0;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 1rem;
   }
   footer .wrapper .fourth .division {
+    padding-top: 1rem;
+  }
+  footer .wrapper p {
+    padding: 1rem 0;
+  }
+  footer .wrapper .division {
     align-items: center;
   }
-  footer .wrapper .fourth form {
+  footer .wrapper form {
     width: 80%;
     margin-bottom: 1rem;
   }
-  footer .wrapper .fourth input::-moz-placeholder {
+  footer .wrapper input::-moz-placeholder {
     text-align: center;
   }
-  footer .wrapper .fourth input::placeholder {
+  footer .wrapper input::placeholder {
     text-align: center;
   }
 }
